separated individual and social features to show up on different pages'

--- a/app/views/pairwise_comparisons/new.html.erb
+++ b/app/views/pairwise_comparisons/new.html.erb
@@ -23,14 +23,14 @@ the time a payment is issued. </p> <br / >
 <p style = "font-size:1.25em;"> Is your feature categorical or continuous? </p>
 
 <form action="#" class = "add_form">
-     <label style = "display:inline;margin-right:5%;">
-       <input id = "cat" class="with-gap" name="group3" type="radio" />
-       <span style = "color:black;font-size:1.3em;">Categorical</span>
-     </label> <br/> <br/>
-      <label style = "display:inline;margin-right:5%;">
-        <input id = "con" class="with-gap" name="group3" type="radio" />
-        <span style = "color:black;font-size:1.3em;">Continuous</span>
-      </label>
+  <label style = "display:inline;margin-right:5%;">
+    <input id = "cat" class="with-gap" name="group3" type="radio" />
+    <span style = "color:black;font-size:1.3em;">Categorical</span>
+  </label> <br/> <br/>
+  <label style = "display:inline;margin-right:5%;">
+    <input id = "con" class="with-gap" name="group3" type="radio" />
+    <span style = "color:black;font-size:1.3em;">Continuous</span>
+  </label>
 </form>
 <a class="waves-effect waves-dark btn" id = "next_btn" style = "margin-top:5%;margin-left:63%;width:20.5%;padding-top:0.7%;padding-bottom:5%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;"> NEXT </a>
 </div>
@@ -56,21 +56,21 @@ the time a payment is issued. </p> <br / >
 <%= render partial: 'about.html.erb' %>
 
 <div class = "contain" style = "display:none">
-<h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Current Systems Feature Selection</h1> <p style ="font-weight:lighter;font-size:2.3em;color:#3d6ab1;display:inline;float:right;margin-top:-3%;margin-right:10%;"> About Survey Completed </p>
+<h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Individual Feature Selection</h1> <p style ="font-weight:lighter;font-size:2.3em;color:#3d6ab1;display:inline;float:right;margin-top:-3%;margin-right:10%;"> About Survey Completed </p>
 <hr id = "hhr">
-<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" >
+<p class = "feature-text">
   Whenever you open your company’s app and start driving, an in-app algorithm works to match
   you with potential customers in your given area. This algorithm has two main goals:
 </p>
-<ul style = "margin-left:10%;color:black;width:80%;" >
+<ul>
   <li class='bullet'>
-    - Provide rides/deliveries to customers when needed
+    1. Provide rides/deliveries to customers when needed
   </li>
   <li class="bullet">
-    - Maximizing drivers’ amounts of trips on the system to maximize drivers’ earnings
+    2. Maximizing drivers’ amounts of trips on the system to maximize drivers’ earnings
   </li>
 </ul>
-<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" >
+<p class="feature-text">
  The boxes below contain features we believe your company’s algorithm
  uses to match drivers with incoming requests. Based on your experiences
  driving for your company, <b>please select any features that you believe your
@@ -88,9 +88,8 @@ the time a payment is issued. </p> <br / >
 <% a = get_ranges %>
 <% b = get_ranges_2 %>
 <% counter = "" %>
-<% @features_all.each do |f| %>
+<% Feature.request.each do |f| %>
 <tr>
-
   <td>
     <% if  counter  == "" || f.description != counter %>
     <h5 style = "font-weight:bold;color:black;"> <%= f.description %> </h5>
@@ -170,14 +169,30 @@ the time a payment is issued. </p> <br / >
        cursor: pointer;
      }
       .bullet {
-        font-size: 1.5em;
-        line-height: 17pt;
-        font-weight: normal;
-        padding-left: 10px;
+        margin-left:12%;
+        width:80%;
+        font-size:23px;
+        font-weight:400;
+        line-height:2;
+        font-family: "Helvetica Neue", sans-serif;
+        color: #636363;
       }
       strong {
         font-weight: bold;
         font-family: verdana;
+      }
+      .feature-text {
+        margin-left:10%;
+        width:80%;
+        font-size:23px;
+        font-weight:400;
+        line-height:1.5;
+        font-family: "Helvetica Neue", sans-serif;
+        color: #636363;
+      }
+      hr {
+        margin-top: 40px;
+        margin-bottom: 40px;
       }
 </style>
  <br> <br> <br> <br><br> <br> <br> <br><br> <br> <br> <br>
