--- a/app/views/pairwise_comparisons/new_how.html.erb
+++ b/app/views/pairwise_comparisons/new_how.html.erb
@@ -59,7 +59,7 @@ the time a payment is issued. </p> <br / >
 </script>
 
 <div class = "contain" style = "display:none">
-<h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Individual Feature Selection</h1> <p style ="font-weight:lighter;font-size:2.3em;color:#3d6ab1;display:inline;float:right;margin-top:-3%;margin-right:10%;"> About Survey Completed </p>
+<h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Social Feature Selection</h1> <p style ="font-weight:lighter;font-size:2.3em;color:#3d6ab1;display:inline;float:right;margin-top:-3%;margin-right:10%;"> About Survey Completed </p>
 <hr id = "hhr">
 <p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:17pt;font-weight:normal;" >
   Whenever you open your company’s app and start driving, an in-app algorithm works to match
@@ -92,7 +92,7 @@ the time a payment is issued. </p> <br / >
 <% a = get_ranges_ai %>
 <% b = get_ranges_ai_2 %>
 <% counter = "" %>
-<% @features_all.each do |f| %>
+<% Feature.driver.each do |f| %>
 <tr>
 
   <td>
