separated features so each one is shown on the correct page

--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -247,9 +247,13 @@ Next Scenario
         return -1;
       }
       if (prev == num_pairs - 1)
+        # Redirect to new how once hit 25
+        # From new how redirect to the index_driver page
+        # Link index_driver page to exit survey
       {
         $("#aller_encompassing").css('display', 'none')
         $("#pg_2").css('display', 'block');
+
       }
 
       $("#all_encompassing").attr('class', prev + 1 )
