--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -1,16 +1,37 @@
-// Place all the styles related to the ranked_list controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#rl-page h1 {
+  text-align: center;
+}
 
+#rl-page .container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
 
-.card {
+#rl-page .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
   border-radius: 5px;
   text-align: center;
+  cursor: grab;
 }
 
-.card:hover {
+#rl-page .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+#rl-page h5 {
+  color:#3d6ab1;
+  margin-bottom: 25px;
+}
+
+#rl-page .feature-value {
+  font-weight:bold;
+  font-size:1.1em;
+}
+
+#rl-page .feature-name {
+  margin-bottom:4%;
+  margin-top:2%;
 }
