--- a/app/views/ranked_list/ranked_list.html.erb
+++ b/app/views/ranked_list/ranked_list.html.erb
@@ -1,14 +1,26 @@
-<% rankedListExamples = @rankedListExamples %>
+<div id="rl-page">
+  <h1> Ranked List </h1>
 
-<% selectedFeats = @selectedFeats %>
+  <% rankedListExamples = @rankedListExamples %>
+  <% selectedFeats = @selectedFeats %>
 
-<% rankedListExamples.each do |rl| %>
-
-    <div class="card ">
-      <div class="card-content">
-        <h5 style = "color:#3d6ab1"> Scenario </h5>
-        <%= Scenario.for_group(rl[0].group_id).sort_by{|key| key}.to_h %>
+  <% rankedListExamples.each do |rl| %>
+    <div class="container">
+      <div class="card ">
+        <div class="card-content">
+          <h5> Scenario </h5>
+          <% counter = 0 %>
+          <% selectedFeats.size.times do %>
+            <% puts @selectedFeats.map{|n| n.category}.inspect %>
+              <p class="feature-value">  <%= Scenario.for_group(rl[0].group_id).sort_by{|key| key}.to_h[Scenario.for_group(rl[0].group_id).sort_by{|key| key}.to_h.keys[counter]] %> </p>
+              <p class="feature-name">  <%= Feature.find(Scenario.for_group(rl[0].group_id).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+            <% counter += 1 %>
+          <% end %>
+        </div>
       </div>
     </div>
+  <% end %>
+</div>
 
-<% end %>
+# Need to implement drag and drop for list
+# Need to add two columns where one is predicted list and other is user list
