Added new pages to redirect to the ranked_list page

--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -102,7 +102,7 @@ decisions? </label>
      type: "post",
      success: function(){
        console.log('Saved Successfully');
-       window.location.href = "/evaluations/new"
+       window.location.href = "/ranked_list/preview/"
      },
      error:function($xhr){
        console.log($xhr);
