added numbers next to scenarios

--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -6,6 +6,12 @@
   text-align: center;
 }
 
+#rl-page h5 {
+  color:#3d6ab1;
+  margin-right: 8%;
+  margin-top: 10%;
+}
+
 #rl-page .container {
   display: flex;
   justify-content: center;
@@ -13,20 +19,9 @@
 }
 
 #rl-page .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
   border-radius: 5px;
-}
-
-#rl-page .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-#rl-page h5 {
-  color:#3d6ab1;
-  margin-bottom: 25px;
-  text-align: center;
 }
 
 #rl-page .feature-value {
@@ -37,19 +32,11 @@
 #rl-page .feature-name {
   margin-bottom:4%;
   margin-top:2%;
-
 }
 
 #rl-page .column {
   float: left;
   width: 50%;
-  // padding-bottom: 0%;
-}
-
-#rl-page .row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 #rl-page .row {
@@ -65,10 +52,18 @@
   margin-top: 2%;
 }
 
-#rl-page .grab {
-  cursor: grab;
-}
-
 #rl-page .default {
   cursor: default;
+}
+
+.numberCircle {
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  padding: 9px;
+  background: #3d6ab1;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
 }
