--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -1,15 +1,26 @@
 #rl-page h1 {
   text-align: center;
+  color: #3d6ab1;
 }
 
-#rl-page h3 {
-  text-align: center;
+#rl-page h4 {
+  margin-left:19%;
+  display: inline-block;
 }
 
 #rl-page h5 {
   color:#3d6ab1;
   margin-right: 8%;
   margin-top: 10%;
+}
+
+#rl-page .directions {
+  margin-left:10%;
+  color:black;
+  width:80%;
+  font-size:1.5em;
+  line-height:22pt;
+  font-weight:normal;
 }
 
 #rl-page .container {
@@ -56,7 +67,7 @@
   cursor: default;
 }
 
-.numberCircle {
+#rl-page .numberCircle {
   border-radius: 50%;
   width: 36px;
   height: 36px;
@@ -65,5 +76,13 @@
   color: white;
   text-align: center;
   font-size: 15px;
+  font-weight: bold;
+}
+
+#rl-page .btn {
+  margin-bottom: 2%;
+  margin-left: 8%;
+  background-color: lightgray;
+  color: black;
   font-weight: bold;
 }
