implemented inputs for user list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,7 @@ body {
 // Footer styling
 .footer {
     background-color: #A9A9A9;
-    margin-top:-4vw;
+    // margin-top:-4vw;
     z-index:5;
     position: relative;
 }
