--- a/app/views/pairwise_comparisons/new.html.erb
+++ b/app/views/pairwise_comparisons/new.html.erb
@@ -57,7 +57,7 @@ the time a payment is issued. </p> <br / >
 
 
 <div class = "contain" style = "display:none">
-<h2 class="title">Feature Selection</h2>
+<h2 class="title">Feature Selection for Your Individual Preference Profile</h2>
 <hr class = "feature-hr">
 <p class = "feature-text" >
   Whenever you open your company’s app and start driving, an in-app algorithm works to match
