styled pc2 page to match design pdf

--- a/app/views/pairwise_comparisons/_page_1.html.erb
+++ b/app/views/pairwise_comparisons/_page_1.html.erb
@@ -32,8 +32,8 @@
     <% @feats.each do |f| %>
         <p class = "scenario-names"><%= f.name %></p>
     <% end %>
-    </div>
-  <a class="waves-effect waves-dark btn" id="start_btn_1" > Start </a>
+  </div>
+  <a class="waves-effect waves-dark start_btn btn" id="start_btn_1" > Start </a>
   <br><br><br><br><br><br><br><br>
 
 </div>
