--- a/app/views/pairwise_comparisons/_page_2.html.erb
+++ b/app/views/pairwise_comparisons/_page_2.html.erb
@@ -4,9 +4,10 @@
   <br>
 
   <div class="social-image-block">
-    <p class = "feature-text">
-      Social Ranking
-    </p>
+    <div class="text-image-container">
+      <h2 class = "title">Social Ranking</h2>
+      <h5 class = "title" style="color:#769FCD;">Who Should Get the Ping?</h5>
+    </div>
     <%= image_tag ('Social_Ranking.png'), :class => "social-ranking-image" %>
   </div>
 
