--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -299,7 +299,7 @@ a:hover
 }
 
 .social-ranking-image {
-  width:20%;
+  width:40%;
   height: auto;
 }
 
@@ -307,4 +307,18 @@ a:hover
   display: flex;
   align-items: center;
   width: 60%;
+  margin: auto;
+}
+#start_btn_4 {
+  margin-top: 3%;
+  margin-right: 7.5%;
+  background: #3d6ab1;
+  color: #ffffff;
+  border-radius: 5px;
+  width: 12.5vw;
+  height: 7.5vh;
+  font-weight: bold;
+  font-size: 1.38em;
+  line-height: 70px;
+  float: right;
 }
