--- a/app/views/pairwise_comparisons/new_how.html.erb
+++ b/app/views/pairwise_comparisons/new_how.html.erb
@@ -59,7 +59,7 @@ the time a payment is issued. </p> <br / >
 </script>
 
 <div class = "contain" style = "display:none">
-<h2 class="title">Social Feature Selection</h2>
+<h2 class="title">Feature Selection for Your Social Preference Model</h2>
 <hr class = "feature-hr">
 <p class = "feature-text" >
   Whenever you open your company’s app and start driving, an in-app algorithm works to match
